--- a/server/package.json
+++ b/server/package.json
@@ -6,14 +6,13 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "Andres Ledesma",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "m": "^1.8.4"
+    "express": "^4.18.2"
   }
 }
