--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,10 @@
   "author": "Andres Ledesma",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "mongoose": "^7.2.2",
     "morgan": "^1.10.0",
     "socket.io": "^4.6.1"
   }
