--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon src/server.js",
     "dev": "nodemon src/server.js"
   },
   "keywords": [],
