Associate User Model with Cart ID, Default User Role, and User Status Verification API Route
Updated the user model to include an association with the cart ID, ensuring that each user is assigned a unique cart ID upon creation. Additionally, implemented a default user role as 'USER' for new user registrations. Introduced a new API route, 'api/auth/current', which can be utilized to verify the current user status. If the user is logged in, their data will be displayed; otherwise, an error message indicating 'no token authentication' will be returned.

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 /server/requests
 /Service Evaluation Server
 .env
+.env.production
+.env.development
 
-server/src/routes/router.js
-server/src/routes/user_class.router.js
-server/src/routes/api/auth/prueba.js
