--- a/server/package.json
+++ b/server/package.json
@@ -6,13 +6,16 @@
   "type": "module",
   "scripts": {
     "start": "nodemon src/server.js",
-    "dev": "nodemon src/server.js"
+    "develop": "nodemon src/server.js",
+    "dev": "nodemon src/server.js --mode development",
+    "prod": "nodemon src/server.js --mode production"
   },
   "keywords": [],
   "author": "Andres Ledesma",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "commander": "^11.0.0",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.1.4",
