--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon src/server.js",
+    "start": "node src/server.js",
     "develop": "nodemon src/server.js",
     "dev": "nodemon src/server.js --mode development",
     "prod": "nodemon src/server.js --mode production"
@@ -14,6 +14,7 @@
   "author": "Andres Ledesma",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^8.0.2",
     "bcrypt": "^5.1.0",
     "commander": "^11.0.0",
     "connect-mongo": "^5.0.0",
@@ -21,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "express-compression": "^1.0.2",
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
     "js-cookie": "^3.0.5",
@@ -28,10 +30,13 @@
     "mongoose": "^7.3.1",
     "mongoose-paginate-v2": "^1.7.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.4",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "twilio": "^4.14.1",
+    "uuid": "^9.0.0"
   }
 }
