Resolved Minor Issue in Cart ID Retrieval
Fixed a minor issue related to the retrieval of cart IDs, ensuring proper functionality.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node src/server.js",
+    "start": "node server.js",
     "develop": "nodemon src/server.js",
     "dev": "nodemon src/server.js --mode development",
     "prod": "nodemon src/server.js --mode production",
